[project]
name = "exposureflow-api"
version = "0.1.0"
description = "ExposureFlow API — natural exposure maximization platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.6.0",
    "pydantic[email]>=2.10.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.28.0",
    "redis>=5.2.0",
    "celery>=5.4.0",
    "cryptography>=44.0.0",
    "pyotp>=2.9.0",
    "google-auth>=2.37.0",
    "exposureflow-connectors @ file:../../packages/connectors",
    "exposureflow-execution-adapters @ file:../../packages/execution-adapters",
    "fpdf2>=2.8.0",
    "python-docx>=1.1.0",
    "stripe>=11.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["exposureflow_api"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
